Revert to previous base e53507209.
Test: git diff e53507209
Change-Id: Ib9a2e7081ab6e42cba0f3def781c575194ca1279

--- a/lib/ubsan_minimal/CMakeLists.txt
+++ b/lib/ubsan_minimal/CMakeLists.txt
@@ -9,9 +9,8 @@ include_directories(..)
 set(UBSAN_CFLAGS ${SANITIZER_COMMON_CFLAGS})
 append_rtti_flag(OFF UBSAN_CFLAGS)
 
-set(UBSAN_LINK_FLAGS ${SANITIZER_COMMON_LINK_FLAGS})
-
-set(UBSAN_DYNAMIC_LIBS ${SANITIZER_COMMON_LINK_LIBS})
+set(UBSAN_STANDALONE_CFLAGS ${SANITIZER_COMMON_CFLAGS})
+append_rtti_flag(OFF UBSAN_STANDALONE_CFLAGS)
 
 add_compiler_rt_component(ubsan-minimal)
 
@@ -40,7 +39,6 @@ if(COMPILER_RT_HAS_UBSAN_MINIMAL)
     ARCHS ${UBSAN_SUPPORTED_ARCH}
     OBJECT_LIBS RTUbsan_minimal
     CFLAGS ${UBSAN_CFLAGS}
-    LINK_FLAGS ${UBSAN_LINK_FLAGS}
     LINK_LIBS ${UBSAN_DYNAMIC_LIBS}
     PARENT_TARGET ubsan-minimal)
 
